[gd_scene load_steps=41 format=2]

[ext_resource path="res://content/gadgets/drillbot/DrillbotStation.gd" type="Script" id=1]
[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/gadgets/drillbot/base-sheet.png" type="Texture" id=3]
[ext_resource path="res://content/gadgets/drillbot/base-glasoverlay-sheet.png" type="Texture" id=4]
[ext_resource path="res://content/sounds/Locations/Drillbot/DrillbotOpen.wav" type="AudioStream" id=5]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=6]
[ext_resource path="res://content/sounds/Locations/Drillbot/fruitready.wav" type="AudioStream" id=7]
[ext_resource path="res://content/sounds/Locations/Drillbot/Pulse2.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 0, 66, 27, 33 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 27, 66, 27, 33 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 54, 66, 27, 33 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 27, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 54, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 81, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 108, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 135, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 162, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 189, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 216, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 243, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 270, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 297, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 324, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 351, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 378, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 405, 0, 27, 33 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 33, 27, 33 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 27, 33, 27, 33 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 54, 33, 27, 33 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 81, 33, 27, 33 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 108, 33, 27, 33 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": false,
"name": "plant",
"speed": 1.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": false,
"name": "open",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 21, 16 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 0, 16, 21, 16 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 21, 16, 21, 16 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 42, 16, 21, 16 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 4 )
region = Rect2( 63, 16, 21, 16 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 4 )
region = Rect2( 63, 0, 21, 16 )

[sub_resource type="SpriteFrames" id=58]
animations = [ {
"frames": [ SubResource( 52 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": false,
"name": "open",
"speed": 10.0
} ]

[node name="DrillbotStation" type="Node2D" groups=["saveable"]]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, -14 )
frames = SubResource( 4 )
animation = "open"

[node name="Amb" parent="Sprite" instance=ExtResource( 6 )]
stream = ExtResource( 8 )
volume_db = -9.614
pitch_scale = 1.6
autoplay = true
bus = "Ambience"
maxAudibleDistance = 60.0
minAudibleDistance = 20.0
fadeInTime = 1.0
fadeOutTime = 1.0
loop = true

[node name="GlasOverlaySprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, -14 )
frames = SubResource( 58 )
animation = "open"

[node name="DropPosition" type="Position2D" parent="."]
position = Vector2( 7, -11 )

[node name="Usable" parent="." instance=ExtResource( 2 )]
position = Vector2( 2, -13 )

[node name="FruitReadySound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 7 )
bus = "Sounds"
randomVolume = 0.0
randomPitch = 0.0
maxAudibleDistance = 120.0
minAudibleDistance = 50.0

[node name="OpeningSound" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 5 )
volume_db = 0.01
bus = "Sounds"
randomVolume = 0.0
randomPitch = 0.0

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="animation_finished" from="GlasOverlaySprite" to="." method="_on_Sprite_animation_finished"]
